// Vitest Snapshot v1

exports[`trie > should build the symbol trie 1`] = `
[
  "a",
  "l",
  "p",
  "h",
  "b",
  "e",
  "t",
  "g",
  "m",
  "G",
  "d",
  "D",
  "s",
  "i",
  "o",
  "n",
  "v",
  "r",
  "z",
  "T",
  "k",
  "L",
  "u",
  "x",
  "X",
  "P",
  "S",
  "c",
  "O",
  "*",
  "/",
  "\\\\",
  "|",
  ">",
  "<",
  "-",
  ":",
  "@",
  "+",
  ".",
  "^",
  "!",
  "=",
  "~",
  "f",
  "w",
  "A",
  "E",
  "_",
  "'",
  "q",
  "C",
  "N",
  "Q",
  "R",
  "Z",
  "(",
  ")",
  "[",
  "]",
  "{",
  "}",
  "&",
  ",",
  ";",
  " ",
]
`;

exports[`trie > should build the symbol trie 2`] = `
[
  {
    "current": 3,
    "isKeyWord": true,
    "tex": "\\\\sum",
    "type": "Const",
    "value": "sum",
  },
  {
    "current": 4,
    "isKeyWord": true,
    "tex": "_{ $1 }",
    "type": "OperatorA",
    "value": "_",
  },
  {
    "current": 5,
    "isKeyWord": true,
    "tex": "(",
    "type": "LParen",
    "value": "(",
  },
  {
    "current": 6,
    "isKeyWord": false,
    "tex": "n",
    "type": "StringLiteral",
    "value": "n",
  },
  {
    "current": 7,
    "isKeyWord": false,
    "tex": "=",
    "type": "StringLiteral",
    "value": "=",
  },
  {
    "current": 8,
    "isKeyWord": false,
    "tex": "1",
    "type": "NumberLiteral",
    "value": "1",
  },
  {
    "current": 9,
    "isKeyWord": true,
    "tex": ")",
    "type": "RParen",
    "value": ")",
  },
  {
    "current": 10,
    "isKeyWord": true,
    "tex": "^{ $1 }",
    "type": "OperatorA",
    "value": "^",
  },
  {
    "current": 11,
    "isKeyWord": true,
    "tex": "(",
    "type": "LParen",
    "value": "(",
  },
  {
    "current": 12,
    "isKeyWord": false,
    "tex": "+",
    "type": "StringLiteral",
    "value": "+",
  },
  {
    "current": 14,
    "isKeyWord": true,
    "tex": "\\\\infty",
    "type": "Const",
    "value": "oo",
  },
  {
    "current": 15,
    "isKeyWord": true,
    "tex": ")",
    "type": "RParen",
    "value": ")",
  },
  {
    "current": 16,
    "isKeyWord": true,
    "tex": "&",
    "type": "Align",
    "value": "&",
  },
  {
    "current": 17,
    "isKeyWord": false,
    "tex": "=",
    "type": "StringLiteral",
    "value": "=",
  },
  {
    "current": 18,
    "isKeyWord": true,
    "tex": "(",
    "type": "LParen",
    "value": "(",
  },
  {
    "current": 20,
    "isKeyWord": true,
    "tex": "\\\\pi",
    "type": "Const",
    "value": "pi",
  },
  {
    "current": 21,
    "isKeyWord": true,
    "tex": "^{ $1 }",
    "type": "OperatorA",
    "value": "^",
  },
  {
    "current": 22,
    "isKeyWord": false,
    "tex": "2",
    "type": "NumberLiteral",
    "value": "2",
  },
  {
    "current": 23,
    "isKeyWord": true,
    "tex": "\\\\frac{ $1 }{ $2 }",
    "type": "OperatorAOB",
    "value": "/",
  },
  {
    "current": 24,
    "isKeyWord": false,
    "tex": "6",
    "type": "NumberLiteral",
    "value": "6",
  },
  {
    "current": 25,
    "isKeyWord": true,
    "tex": ")",
    "type": "RParen",
    "value": ")",
  },
  {
    "current": 27,
    "isKeyWord": true,
    "tex": "\\\\\\\\",
    "type": "Align",
    "value": "

",
  },
  {
    "current": 28,
    "isKeyWord": false,
    "tex": "f",
    "type": "StringLiteral",
    "value": "f",
  },
  {
    "current": 29,
    "isKeyWord": true,
    "tex": "(",
    "type": "LParen",
    "value": "(",
  },
  {
    "current": 30,
    "isKeyWord": false,
    "tex": "x",
    "type": "StringLiteral",
    "value": "x",
  },
  {
    "current": 31,
    "isKeyWord": true,
    "tex": ")",
    "type": "RParen",
    "value": ")",
  },
  {
    "current": 32,
    "isKeyWord": true,
    "tex": "&",
    "type": "Align",
    "value": "&",
  },
  {
    "current": 33,
    "isKeyWord": false,
    "tex": "=",
    "type": "StringLiteral",
    "value": "=",
  },
  {
    "current": 34,
    "isKeyWord": false,
    "tex": "x",
    "type": "StringLiteral",
    "value": "x",
  },
  {
    "current": 35,
    "isKeyWord": true,
    "tex": "^{ $1 }",
    "type": "OperatorA",
    "value": "^",
  },
  {
    "current": 36,
    "isKeyWord": false,
    "tex": "2",
    "type": "NumberLiteral",
    "value": "2",
  },
]
`;

exports[`trie > should build the symbol trie 3`] = `
[
  {
    "current": 1,
    "isKeyWord": false,
    "tex": "x",
    "type": "StringLiteral",
    "value": "x",
  },
  {
    "current": 5,
    "isKeyWord": true,
    "tex": "\\\\mapsto",
    "type": "Const",
    "value": "|->",
  },
  {
    "current": 9,
    "isKeyWord": false,
    "tex": "e",
    "type": "Text",
    "value": "e",
  },
  {
    "current": 10,
    "isKeyWord": true,
    "tex": "^{ $1 }",
    "type": "OperatorA",
    "value": "^",
  },
  {
    "current": 11,
    "isKeyWord": true,
    "tex": "(",
    "type": "LParen",
    "value": "(",
  },
  {
    "current": 12,
    "isKeyWord": false,
    "tex": "2",
    "type": "NumberLiteral",
    "value": "2",
  },
  {
    "current": 14,
    "isKeyWord": true,
    "tex": "\\\\pi",
    "type": "Const",
    "value": "pi",
  },
  {
    "current": 18,
    "isKeyWord": false,
    "tex": "i",
    "type": "Text",
    "value": "i",
  },
  {
    "current": 20,
    "isKeyWord": false,
    "tex": "x",
    "type": "StringLiteral",
    "value": "x",
  },
  {
    "current": 21,
    "isKeyWord": true,
    "tex": ")",
    "type": "RParen",
    "value": ")",
  },
]
`;
